--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -2,7 +2,7 @@
 <h1 *ngIf="!!error; else content">{{ error }}</h1>
 
 <ng-template #content>
-  <div *ngFor="let todo of todos">
+  <div *ngFor="let todo of todos$ | async">
     {{ todo.id }}
     {{ todo.title }}
   </div>
