--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,9 +1,21 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <label for="email">Email: </label>
-  <input id="email" type="text" formControlName="email" />
+  <div>
+    <label for="email">Email: </label>
+    <input id="email" type="text" formControlName="email" placeholder="enter email" />
+    <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
+      <div *ngIf="email.errors?.['required']">Name is required.</div>
+      <div *ngIf="email.errors?.['email']">Name must be ****@****.**.</div>
+    </div>
+  </div>
 
-  <label for="password">Password: </label>
-  <input id="password" type="password" formControlName="password" />
+  <div>
+    <label for="password">Password: </label>
+    <input id="password" type="password" formControlName="password" placeholder="enter password" />
+    <div *ngIf="password.invalid && (password.dirty || password.touched)" class="error">
+      <div *ngIf="password.errors?.['required']">Name is required.</div>
+      <div *ngIf="password.errors?.['minlength']">Name must be at least 6 characters long.</div>
+    </div>
+  </div>
 
-  <button type="submit">submit</button>
+  <button type="submit" [disabled]="loginForm.invalid">submit</button>
 </form>
