add: pattern validator

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,8 @@
     <input id="email" type="text" formControlName="email" placeholder="enter email" />
     <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
       <div *ngIf="email.errors?.['required']">Name is required.</div>
-      <div *ngIf="email.errors?.['email']">Name must be ****@****.**.</div>
+      <div *ngIf="email.errors?.['email']">Name must be email.</div>
+      <div *ngIf="email.errors?.['pattern']">Name must be ****@****.**.</div>
     </div>
   </div>
 
