--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,3 +1,33 @@
 .error {
   color: darkred
 }
+
+
+.ng-invalid:not(form) {
+  border-left: 5px solid #a94442; /* red */
+}
+
+.ng-valid:not(form)
+{
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-untouched:not(form) {
+  border-left: 5px solid rgba(144, 152, 161, 0.38); /* grey */
+}
+.buttonError {
+color:  #a94442;
+  background-color: rgba(119,6,6,0.1);
+  border: none;
+}
+.buttonSuccess {
+  color:  #42A948;
+  background-color: rgba(66, 169, 72, 0.10);
+  border-color:  #42A948;
+
+}
+.buttonUntouched{
+  color: rgba(144, 152, 161, 0.38);
+  background-color: rgba(119,6,6,0.1);
+  border: none;
+}
