add: routing structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<tdl-todos></tdl-todos>
-<tdl-login></tdl-login>
+<!--<tdl-todos></tdl-todos>-->
+<!--<tdl-login></tdl-login>-->
+<span>
+  <a routerLink="/">home</a>
+  <a routerLink="/login"> login </a>
+  <a routerLink="/todos"> todos </a>
+  <a routerLink="/profile"> profile </a>
+</span>
+<router-outlet></router-outlet>
