--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <!--<tdl-todos></tdl-todos>-->
 <!--<tdl-login></tdl-login>-->
 <span>
-  <a routerLink="/">home</a>
-  <a routerLink="/login"> login </a>
-  <a routerLink="/todos"> todos </a>
-  <a routerLink="/profile"> profile </a>
+  <a routerLink="/" class="button" routerLinkActive="activebutton" [routerLinkActiveOptions]="{ exact: true }">home</a>
+  <a routerLink="/login" class="button" routerLinkActive="activebutton"> login </a>
+  <a routerLink="/todos" class="button" routerLinkActive="activebutton"> todos </a>
+  <a routerLink="/users" class="button" routerLinkActive="activebutton"> users </a>
+  <a routerLink="/profile" class="button" routerLinkActive="activebutton"> profile </a>
 </span>
 <router-outlet></router-outlet>
