--- a/src/auth/components/login/login.component.scss
+++ b/src/auth/components/login/login.component.scss
@@ -7,27 +7,29 @@
   border-left: 5px solid #a94442; /* red */
 }
 
-.ng-valid:not(form)
-{
+.ng-valid:not(form) {
   border-left: 5px solid #42A948; /* green */
 }
 
 .ng-untouched:not(form) {
   border-left: 5px solid rgba(144, 152, 161, 0.38); /* grey */
 }
+
 .buttonError {
-color:  #a94442;
-  background-color: rgba(119,6,6,0.1);
+  color: #a94442;
+  background-color: rgba(119, 6, 6, 0.1);
   border: none;
 }
+
 .buttonSuccess {
-  color:  #42A948;
+  color: #42A948;
   background-color: rgba(66, 169, 72, 0.10);
-  border-color:  #42A948;
+  border-color: #42A948;
 
 }
-.buttonUntouched{
+
+.buttonUntouched {
   color: rgba(144, 152, 161, 0.38);
-  background-color: rgba(119,6,6,0.1);
+  background-color: rgba(119, 6, 6, 0.1);
   border: none;
 }
