--- a/src/profile/components/profile/profile.component.html
+++ b/src/profile/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <p>profile works!</p>
-<div>{{ (this.profile$ | async)?.fullName }}</div>
+<!--<div>{{ (this.profile$ | async)?.fullName }}</div>-->
 <!--или-->
 <div *ngIf="this.profile$ | async as profile">{{ profile.fullName }}</div>
 
