--- a/src/app/profile/components/profile/profile.component.html
+++ b/src/app/profile/components/profile/profile.component.html
@@ -1,5 +1,6 @@
 <p>profile works!</p>
-<!--<div>{{ (this.profile$ | async)?.fullName }}</div>-->
+<!-- <div>{{ (this.profile$ | async)?.fullName }}</div> та не делают-->
+
 <!--или-->
 <div *ngIf="this.profile$ | async as profile">{{ profile.fullName }}</div>
 
