--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -3,6 +3,6 @@
   <a routerLink="/" class="button" routerLinkActive="activebutton" [routerLinkActiveOptions]="{ exact: true }">home</a>
   <a routerLink="/login" class="button" routerLinkActive="activebutton"> login </a>
   <a routerLink="/todos" class="button" routerLinkActive="activebutton"> todos </a>
-  <a routerLink="/users" class="button" routerLinkActive="activebutton"> users </a>
-  <a routerLink="/profile" class="button" routerLinkActive="activebutton"> profile </a>
+  <!--  <a routerLink="/users" class="button" routerLinkActive="activebutton"> users </a>-->
+  <!--  <a routerLink="/profile" class="button" routerLinkActive="activebutton"> profile </a>-->
 </span>
