style: some styles

--- a/src/app/todos/components/todo/todo.component.html
+++ b/src/app/todos/components/todo/todo.component.html
@@ -1,3 +1,4 @@
-<span>ID = {{ todo.id }} </span>
-<tdl-editable-name [name]="todo.title" (changeName)="getNewTitle($event)"></tdl-editable-name>
-<button (click)="deleteTodo()">del</button>
+<div class="title">
+  <tdl-editable-name [name]="todo.title" (changeName)="getNewTitle($event)"></tdl-editable-name>
+  <button class="buttonDel" (click)="deleteTodo()">x</button>
+</div>
