--- a/src/app/todos/components/todos/todos.component.html
+++ b/src/app/todos/components/todos/todos.component.html
@@ -2,8 +2,10 @@
 <h1 *ngIf="!!error; else content">{{ error }}</h1>
 
 <ng-template #content>
-  <div *ngFor="let todo of todos$ | async">
-    <tdl-todo [todo]="todo"></tdl-todo>
+  create new todo <button (click)="createTodosHandler()">create</button>
+  <div class="todos">
+    <div class="todo" *ngFor="let todo of todos$ | async">
+      <tdl-todo [todo]="todo"></tdl-todo>
+    </div>
   </div>
-  <button (click)="createTodosHandler()">create</button>
 </ng-template>
