--- a/src/app/todos/components/todos/todos.component.html
+++ b/src/app/todos/components/todos/todos.component.html
@@ -2,7 +2,7 @@
 <h1 *ngIf="!!error; else content">{{ error }}</h1>
 
 <ng-template #content>
-  create new todo <button (click)="createTodosHandler()">create</button>
+  <tdl-add-item placeholder="create new ToDo" (addItem)="createTodosHandler($event)"></tdl-add-item>
   <div class="todos">
     <div class="todo" *ngFor="let todo of todos$ | async">
       <tdl-todo [todo]="todo"></tdl-todo>
