--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -10,12 +10,16 @@
   </div>
 
   <div>
-    <label for="password">Password: </label>
+    <label for="password">Password:</label>
     <input id="password" type="password" formControlName="password" placeholder="enter password" />
     <div *ngIf="password.invalid && (password.dirty || password.touched)" class="error">
       <div *ngIf="password.errors?.['required']">Name is required.</div>
       <div *ngIf="password.errors?.['minlength']">Name must be at least 6 characters long.</div>
     </div>
+  </div>
+
+  <div>
+    <input id="rememberMe" type="checkbox" formControlName="rememberMe" /> <label for="rememberMe">Remember Me</label>
   </div>
 
   <button
